petites modif agenda form pour test

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -6,13 +6,16 @@
             <div class="nav-wrapper backnav">
                 <a href="#!" class="brand-logo decal">Acceuil</a>
                 <ul class="right hide-on-med-and-down">
+
+                    <!-------------- METTRE EN BDD POUR ADMIN ------------------->
+
                     <li>
                         <ul id="dropdown2" class="dropdown-content">
                             <li><a href="#!">one<span class="badge">1</span></a></li>
                             <li><a href="#!">two<span class="new badge">1</span></a></li>
                             <li><a href="#!">three</a></li>
                         </ul>
-                        <a class="btn dropdown-button navbutton fsize" href="#!" data-activates="dropdown2">Galleries{#<i class="material-icons right">arrow_drop_down</i>#}</a>
+                        <a class="btn dropdown-button navbutton fsize" href="#!" data-activates="dropdown2">coté maison{#<i class="material-icons right">arrow_drop_down</i>#}</a>
                     </li>
 
                     <li>
@@ -21,8 +24,19 @@
                             <li><a href="#!">two<span class="new badge">1</span></a></li>
                             <li><a href="#!">three</a></li>
                         </ul>
-                        <a class="btn dropdown-button navbutton fsize" href="#!" data-activates="dropdown2">Collections{#<i class="material-icons right">arrow_drop_down</i>#}</a>
+                        <a class="btn dropdown-button navbutton fsize" href="#!" data-activates="dropdown2">coté jardin{#<i class="material-icons right">arrow_drop_down</i>#}</a>
                     </li>
+                    <li>
+                        <ul id="dropdown2" class="dropdown-content">
+                            <li><a href="#!">one<span class="badge">1</span></a></li>
+                            <li><a href="#!">two<span class="new badge">1</span></a></li>
+                            <li><a href="#!">three</a></li>
+                        </ul>
+                        <a class="btn dropdown-button navbutton fsize" href="#!" data-activates="dropdown2">Accessoires{#<i class="material-icons right">arrow_drop_down</i>#}</a>
+                    </li>
+
+                    <!-------------- METTRE EN BDD POUR ADMIN ------------------->
+
                     <li><a class="btn dropdown-button navbutton fsize" href="#!" data-activates="dropdown2">Contact</a></li>
                 </ul>
             </div>
@@ -36,7 +50,7 @@
 
 {% block footer %}
 
-    <footer class="page-footer backfoot">
+    <footer class="page-footer backcontent">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
@@ -44,7 +58,7 @@
                     <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
-                    <h5 class="white-text">Links</h5>
+                    <h5 class="white-text">Partenaires</h5>
                     <ul>
                         <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
                         <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
