--- a/src/CalendarBundle/Resources/views/layout.html.twig
+++ b/src/CalendarBundle/Resources/views/layout.html.twig
@@ -1,4 +1,4 @@
-{% extends '@PlateForme/layout.html.twig' %}
+{% extends 'layout.html.twig' %}
 
     {% block stylesheets %}
         {{ parent() }}
