crud header rendering layout

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -1,74 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block header %}
-    <div class="navbar-fixed">
-        <nav class="nav-extended">
-            <div class="nav-wrapper backnav">
-                <a href="{{ path('homepage') }}" class="brand-logo decal">Acceuil</a>
-                <ul class="right hide-on-med-and-down">
 
-                    <!-------------- METTRE EN BDD POUR ADMIN ------------------->
-
-                    {% if is_granted('ROLE_ADMIN') %}
-                        <li>
-                            <a href="{{ path('gallery_new') }}" class="btn-floating btn-large waves-effect waves-light green darken-1 bouton-new-gallery">
-                                <i class=" material-icons bouton-new-gallery-icon">add</i>
-                            </a>
-                        </li>
-
-                    {% endif %}
-
-                   {##}
-                    {#{% for gallery in galleries %}#}
-
-                        {#<li>#}
-                            {#<ul id="dropdown2" class="dropdown-content">#}
-                                {#<li><a href="#!">one<span class="badge">1</span></a></li>#}
-                                {#<li><a href="#!">two<span class="new badge">1</span></a></li>#}
-                                {#<li><a href="#!">three</a></li>#}
-                            {#</ul>#}
-                            {#<a class="btn dropdown-button navbutton fsize" href="#!" data-activates="dropdown2">{{ gallery.name }}</a>#}
-                        {#</li>#}
-
-                    {#{% endfor %}#}
-
-
-                    <li>
-                        <ul id="dropdown2" class="dropdown-content">
-                            <li><a href="">one<span class="badge">1</span></a></li>
-                            <li><a href="#!">two<span class="new badge">1</span></a></li>
-                            <li><a href="#!">three</a></li>
-                        </ul>
-                        <a class="btn dropdown-button navbutton fsize" href="#!" data-activates="dropdown2">coté maison{#<i class="material-icons right">arrow_drop_down</i>#}</a>
-                    </li>
-
-                    <li>
-                        <ul id="dropdown2" class="dropdown-content">
-                            <li><a href="#!">one<span class="badge">1</span></a></li>
-                            <li><a href="#!">two<span class="new badge">1</span></a></li>
-                            <li><a href="#!">three</a></li>
-                        </ul>
-                        <a class="btn dropdown-button navbutton fsize" href="#!" data-activates="dropdown2">coté jardin{#<i class="material-icons right">arrow_drop_down</i>#}</a>
-                    </li>
-                    <li>
-                        <ul id="dropdown2" class="dropdown-content">
-                            <li><a href="#!">one<span class="badge">1</span></a></li>
-                            <li><a href="#!">two<span class="new badge">1</span></a></li>
-                            <li><a href="#!">three</a></li>
-                        </ul>
-                        <a class="btn dropdown-button navbutton fsize" href="#!" data-activates="dropdown2">Accessoires{#<i class="material-icons right">arrow_drop_down</i>#}</a>
-                    </li>
-
-                    <!-------------- METTRE EN BDD POUR ADMIN ------------------->
-
-                    <li><a class="btn dropdown-button navbutton fsize" href="#!" data-activates="dropdown2">Contact</a></li>
-                </ul>
-            </div>
-            <div class="nav-content backcontent center">
-                <span class="nav-title f-size">Nathalie Sian Création</span>
-            </div>
-        </nav>
-    </div>
+    {{ render(controller('AppBundle:Header:index')) }}
 
 {% endblock %}
 
