--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,4 +1,8 @@
+/********************************************************************************************************************/
 
+/*                                                     RESPONSIVE                                                   */
+
+/********************************************************************************************************************/
 
 
 /* Extra small devices (portrait phones, less than 576px)*/
@@ -55,6 +59,19 @@
 
 }
 
+/********************************************************************************************************************/
+
+/*                                                        GENERAL                                                   */
+
+/********************************************************************************************************************/
+
+input{
+    width: 300px !important;
+}
+
+p{
+    font-size: larger;
+}
 
 
     /*******************************************************/
@@ -151,20 +168,6 @@
         box-shadow: 8px 8px 12px #555;
     }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*******************************************************/
 /*                                                     */
 /*                                                     */
@@ -177,10 +180,43 @@
 /************************ LOGIN ************************/
 /*******************************************************/
 /*******************************************************/
-
     .login{
         color: white;
     }
     .login:hover{
         color: white;
     }
+
+/*******************************************************/
+/*                                                     */
+/*                                                     */
+/*                       HEADER                        */
+/*                                                     */
+/*                                                     */
+/*******************************************************/
+/*******************************************************/
+/*******************************************************/
+/************************* NEW *************************/
+/*******************************************************/
+/*******************************************************/
+.header-marge {
+    margin-top: 145px;
+}
+
+.header-buttom-marge {
+    margin-top: 60px;
+}
+
+/*******************************************************/
+/*******************************************************/
+/******************** SHOW ALL *************************/
+/*******************************************************/
+/*******************************************************/
+.decal{
+    margin-left: 100px;
+}
+
+.title{
+    font-weight: bold;
+    text-decoration: underline;
+}
