--- a/app/Resources/views/header/show.html.twig
+++ b/app/Resources/views/header/show.html.twig
@@ -1,32 +1,50 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
 {% block body %}
-    <h1>Header</h1>
 
-    <table>
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ header.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ header.name }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="container">
+        <div class="header-marge">
+            <div class="row">
+                <div class="col s12">
 
-    <ul>
-        <li>
-            <a href="{{ path('header_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('header_edit', { 'id': header.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+                    <div class="row">
+                        <h1 class="center">Résultat de l'enregistrement</h1>
+                    </div>
+
+                    <div class="row">
+                        <div class="col s12 m6 l3">
+                            <p>Nom de la nouvelle catégorie :</p>
+                        </div>
+                        <div class="col s12 m6 l3">
+                           <p >{{ header.name }}</p>
+                        </div>
+                    </div>
+
+                    <div class="center">
+
+                        <a href="{{ path('header_show_all') }}">
+                            <button class=" btn-floating btn-large waves-effect tooltipped icon-background6" type="submit" name="action"
+                                    data-position="bottom"
+                                    data-delay="50"
+                                    data-tooltip="liste">
+                                <i class="material-icons">view_list</i>
+                            </button>
+                        </a>
+
+                        <a class="btn-floating btn-large waves-effect waves-light blue darken-1"
+                           data-position="bottom"
+                           data-delay="50"
+                           data-tooltip="Accueil"
+                           href="{{ path('homepage') }}">
+                            <i class="small material-icons">home</i>
+                        </a>
+                    </div>
+
+                    <div class="header-buttom-marge"></div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
