--- a/app/Resources/views/gallery/index.html.twig
+++ b/app/Resources/views/gallery/index.html.twig
@@ -1,39 +1,57 @@
 {% extends 'layout.html.twig' %}
 
 {% block body %}
-    <h1>Galleries list</h1>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
+    <ul id="dropdown2" class="dropdown-content">
+
         {% for gallery in galleries %}
-            <tr>
-                <td><a href="{{ path('gallery_show', { 'id': gallery.id }) }}">{{ gallery.id }}</a></td>
-                <td>{{ gallery.name }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('gallery_show', { 'id': gallery.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('gallery_edit', { 'id': gallery.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
 
-    <ul>
+            <li><a href="">{{ gallery.name }}</a></li>
+
+        {% endfor %}
+
         <li>
-            <a href="{{ path('gallery_new') }}">Create a new gallery</a>
+            <a href="{{ path('header_new') }}" class="btn-floating btn-large waves-effect waves-light green darken-1 bouton-new-gallery">
+                <i class=" material-icons bouton-new-gallery-icon">add</i>
+            </a>
         </li>
     </ul>
+
+
+
+    {#<h1>Galleries list</h1>#}
+
+    {#<table>#}
+        {#<thead>#}
+            {#<tr>#}
+                {#<th>Id</th>#}
+                {#<th>Name</th>#}
+                {#<th>Actions</th>#}
+            {#</tr>#}
+        {#</thead>#}
+        {#<tbody>#}
+        {#{% for gallery in galleries %}#}
+            {#<tr>#}
+                {#<td><a href="{{ path('gallery_show', { 'id': gallery.id }) }}">{{ gallery.id }}</a></td>#}
+                {#<td>{{ gallery.name }}</td>#}
+                {#<td>#}
+                    {#<ul>#}
+                        {#<li>#}
+                            {#<a href="{{ path('gallery_show', { 'id': gallery.id }) }}">show</a>#}
+                        {#</li>#}
+                        {#<li>#}
+                            {#<a href="{{ path('gallery_edit', { 'id': gallery.id }) }}">edit</a>#}
+                        {#</li>#}
+                    {#</ul>#}
+                {#</td>#}
+            {#</tr>#}
+        {#{% endfor %}#}
+        {#</tbody>#}
+    {#</table>#}
+
+    {#<ul>#}
+        {#<li>#}
+            {#<a href="{{ path('gallery_new') }}">Create a new gallery</a>#}
+        {#</li>#}
+    {#</ul>#}
 {% endblock %}
