--- a/web/css/main.css
+++ b/web/css/main.css
@@ -124,6 +124,12 @@ p{
         margin-top: -12px;
     }
 
+    .material-icons-size{
+        margin-left: 40px !important;
+        font-size: 40px !important;
+    }
+
+
     /*******************************************************/
     /*******************************************************/
     /************************ FOOTER ***********************/
