--- a/app/Resources/views/header/index.html.twig
+++ b/app/Resources/views/header/index.html.twig
@@ -24,13 +24,13 @@
 
                             {% for gallery in galleries %}
 
-                                <li><a href="">{{ gallery.name }}</a></li>
+                                <li><a href={{ path('subgallery_index') }}">{{ gallery.name}}</a></li>
 
                             {% endfor %}
 
                             {% if is_granted('ROLE_ADMIN') %}
                             <li class="center">
-                                <a href="{{ path('header_new') }}" class="waves-effect waves-light green darken-1">
+                                <a href="{{ path('gallery_new') }}" class="waves-effect waves-light green darken-1">
                                     <i class=" material-icons white-text large material-icons-size">add</i>
                                 </a>
                             </li>
