--- a/web/css/main.css
+++ b/web/css/main.css
@@ -226,3 +226,35 @@ p{
     font-weight: bold;
     text-decoration: underline;
 }
+
+/*******************************************************/
+/*                                                     */
+/*                                                     */
+/*                       GALLERY                       */
+/*                                                     */
+/*                                                     */
+/*******************************************************/
+/*******************************************************/
+/*******************************************************/
+/************************ INDEX ************************/
+/*******************************************************/
+/*******************************************************/
+
+.box-size{
+    width: 100px;
+}
+
+.disposition{
+    display: flex;
+    float: left;
+}
+
+/*******************************************************/
+/*******************************************************/
+/************************ EDIT *************************/
+/*******************************************************/
+/*******************************************************/
+
+.disposition2{
+    display: flex;
+}
