--- a/app/Resources/views/gallery/new.html.twig
+++ b/app/Resources/views/gallery/new.html.twig
@@ -1,16 +1,77 @@
 {% extends 'layout.html.twig' %}
 
 {% block body %}
-    <h1>Gallery creation</h1>
 
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
-    {{ form_end(form) }}
+    <div class="container">
+        <div class="header-marge">
+            <div class="row">
+                <div class="col s12">
 
-    <ul>
-        <li>
-            <a href="{{ path('gallery_index') }}">Back to the list</a>
-        </li>
-    </ul>
+                    <div class="row">
+                        <h1 class="center">Ajout d'une nouvelle gallerie</h1>
+                    </div>
+
+                    {{ form_start(form) }}
+
+                    <div class="row">
+                        <div class="col s12 m6 l3">
+                            <p>Sélection de la catégorie :</p>
+                        </div>
+                        <div class="col s12 m6 l3">
+                            {{ form_widget(form.header) }}
+                            {{ form_errors(form.header) }}
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col s12 m6 l3">
+                            <p>Nom de la nouvelle catégorie :</p>
+                        </div>
+                        <div class="col s12 m6 l3">
+                            {{ form_widget(form.name) }}
+                            {{ form_errors(form.name) }}
+                        </div>
+                    </div>
+
+                    <div class="center">
+                        <button class="btn-floating btn-large waves-effect waves-light green darken-1 modal-action modal-close"
+                                type="submit">
+                            <i class="material-icons">check</i>
+                        </button>
+
+                        <a class="btn-floating btn-large waves-effect waves-light blue darken-1 modal-action modal-close"
+                           href="{{ path('homepage') }}">
+                            <i class="small material-icons">home</i>
+                        </a>
+                    </div>
+
+                    {{ form_end(form) }}
+
+                    <div class="header-buttom-marge"></div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+    {#<h1>Gallery creation</h1>#}
+
+    {#{{ form_start(form) }}#}
+        {#{{ form_widget(form) }}#}
+        {#<input type="submit" value="Create" />#}
+    {#{{ form_end(form) }}#}
+
+    {#<ul>#}
+        {#<li>#}
+            {#<a href="{{ path('gallery_index') }}">Back to the list</a>#}
+        {#</li>#}
+    {#</ul>#}
 {% endblock %}
